<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MedTime</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="login">Log In</string>

    <color name="bg_colour">#B9DEEB</color>

    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_pacienti">Pacienti</string>
    <string name="title_activity_consultatii">Consultatii</string>
    <string name="new_game">new game</string>
    <string name="adaugacon">Adauga Consultatie</string>
    <string name="mo">Monday</string>
    <string name="tu">Tuesday</string>
    <string name="we">Wednesday</string>
    <string name="th">Thursday</string>
    <string name="fr">Friday</string>
    <string name="apointment_pacient">Pacients name</string>
    <string name="start_time">Appointment starting time</string>
    <string name="end_time">Appointment end time</string>
    <string name="appointment_date">Appointment date</string>

</resources>
