<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView_appointment"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="#FFFFBB33"
                android:contentDescription="@string/app_name"
                android:scaleType="center"
                android:src="@drawable/new_appointment" />

            <EditText
                android:id="@+id/editText_appointment_pacient_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView_appointment"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="14dp"
                android:ems="10"
                android:hint="@string/apointment_pacient"
                android:inputType="textEmailAddress" >
            </EditText>

            <TextView
                android:id="@+id/textView_appointment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_appointment_pacient_name"
                android:layout_marginLeft="14dp"
                android:text="@string/appointment_date"
                android:textSize="20dp" />

            <DatePicker
                android:id="@+id/datePicker_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView_appointment_date"
                android:layout_marginTop="16dp"
                android:datePickerMode="spinner"
                android:spinnersShown="false" />

            <TextView
                android:id="@+id/textView_appointment_starttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/datePicker_appointment"
                android:layout_marginTop="14dp"
                android:layout_marginLeft="14dp"
                android:text="@string/start_time"
                android:textSize="20dp" />

            <TimePicker
                android:id="@+id/timePicker_appointment_starttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:timePickerMode="spinner"
                android:layout_below="@+id/textView_appointment_starttime"
                android:layout_marginTop="14dp" />

            <TextView
                android:id="@+id/textView_appointment_endtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/timePicker_appointment_starttime"
                android:text="@string/end_time"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="14dp"
                android:textSize="20dp" />

            <TimePicker
                android:id="@+id/timePicker_appointment_endtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:soundEffectsEnabled="true"
                android:timePickerMode="clock"
                
                android:layout_below="@+id/textView_appointment_endtime" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>